httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: default
spec:
  ports:
  - nodePort: 32080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpserver
  type: NodePort
