gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpserver-gateway
  namespace: learncn
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "learncn.chensi.com"
