virtServ.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver
  namespace: learncn
spec:
  hosts:
  - "learncn.chensi.com"
  gateways:
  - httpserver-gateway
  http:
  - match:
    - uri:
        prefix: /metrics
    - uri:
        prefix: /021
    route:
    - destination:
        port:
          number: 8080
        host: httpserver
